@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2004-12-20 21:05:56 GMT	John Goerzen <jgoerzen@complete.org>	patch-107
+
+    Summary:
+      Checkpointing (compiles)
+    Revision:
+      missingh--head--0.7--patch-107
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/IO/HVFS/InstanceHelpers.hs
+
+
 2004-12-20 20:54:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-106
 
     Summary:
